app/styles/main.less
// Core variables
@import "variables";
// Core mixins
@import "../../bower_components/bootstrap/less/mixins";
// Reset
@import "../../bower_components/bootstrap/less/normalize";
@import "../../bower_components/bootstrap/less/print";

@import "../../bower_components/bootstrap/less/scaffolding";
@import "../../bower_components/bootstrap/less/type";
@import "../../bower_components/bootstrap/less/grid";

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v5/zhcz-_WihjSQC0oHJ9TCYAzyDMXhdD8sAj6OAJTFsBI.woff2) format('woff2'), url(https://fonts.gstatic.com/s/montserrat/v5/zhcz-_WihjSQC0oHJ9TCYL3hpw3pgy2gAi-Ip7WPMi0.woff) format('woff');
}

html, body {
  width: 100%;
  height: 100%;
}

html {
  overflow: hidden;
  position: relative;
  background: url(../images/banner_480.jpg) no-repeat center center fixed;
  background-color: #020202;
  background-size: cover;
}

@import "background";

#intro {
  position: absolute;
  bottom: -1px;
  left: 0;
}

#foo {
  position: absolute;
  top: 0;
  right: 0;
  text-align: right;
}

h1 {
  text-transform: uppercase;
  margin: 0;
}
p {
  margin-bottom: 0;
}

h1, span {
  display: inline-block;
  background-color: #020202;
  padding: 0 2px;
}

@media (max-width: @screen-xs-max) {
  body {
    font-size: 14px;
  }
  h1 {
    font-size: 20px;
  }
}

